--- a/exercise1-clean.yaml
+++ b/exercise1-clean.yaml
@@ -6,12 +6,22 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-    - name: Breaking the exercise1
+    - name: Clean the exercise1
       kubernetes.core.k8s:
         state: absent
         template: "exercise1-break-vm.yaml.j2"
-      register: breakvm
-      until: breakvm is succeeded
+      register: cleanvm
+      until: cleanvm is succeeded
       retries: 60
       delay: 10
-      failed_when: breakvm is failed or breakvm.failed
+      failed_when: cleanvm is failed or cleanvm.failed
+
+    - name: Wait for the Virtual Machine to be removed
+      kubernetes.core.k8s_info:
+        kind: VirtualMachine
+        namespace: "namespace-{{ user }}"
+        name: "exercises"
+      register: cleanvm
+      retries: "60"
+      delay: "2"
+      until: cleanvm.resources | length == 0
