wait for vm be started on fix

--- a/exercise1-fix.yaml
+++ b/exercise1-fix.yaml
@@ -38,3 +38,15 @@
       retries: 60
       delay: 10
       failed_when: fixvm is failed or fixvm.failed
+
+    - name: Wait for VM to be running
+      kubernetes.core.k8s_info:
+        api_version: kubevirt.io/v1
+        kind: VirtualMachineInstance
+        namespace: "namespace-{{ user }}"
+        name: "exercise1"
+      register: exercise1info
+      until: "exercise1info.resources | length > 0 and exercise1info.resources[0].status.phase == 'Running'"
+      retries: 60
+      delay: 10
+      failed_when: exercise1info.resources | length == 0
