--- a/exercise7-fix.yaml
+++ b/exercise7-fix.yaml
@@ -14,6 +14,11 @@
       register: ex1vm
       failed_when: false
 
+    - name: Fail if not logged in as admin
+      ansible.builtin.fail:
+        msg: "You must run 'lab break exercise7' before run the lab fix"
+      when: ex1vm.resources | length == 0
+
     - name: Stop VM exercise7 if it exists
       kubernetes.core.k8s:
         namespace: "namespace-{{ user }}"
