--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -258,8 +258,8 @@
       ansible.builtin.shell:
         cmd: '/home/lab-user/configure-tmux-users.sh'
       ignore_errors: true
- 
-    - name: Substituir string no arquivo .tmux/file
+
+    - name: Changing the file ocp-cluster.tmux
       ansible.builtin.replace:
         path: /home/user{{ item | int }}/.tmux/ocp-cluster.tmux
         regexp: '/tmp/dummy-file-tmux'
@@ -304,3 +304,132 @@
             apiGroup: rbac.authorization.k8s.io
       with_sequence: start=1 end={{ num_users }}
       ignore_errors: true
+
+    - name: Ensure community.crypto is installed
+      ansible.builtin.command:
+        cmd: ansible-galaxy collection install community.crypto
+      register: install_result
+
+    - name: Ensure .ssh directory exists on users dir
+      ansible.builtin.file:
+        path: /home/user{{ item }}/.ssh
+        state: directory
+        owner: 'user{{ item }}'
+        group: 'user{{ item }}'
+        mode: '0700'
+      with_sequence: start=1 end=5
+      become: true
+      become_method: ansible.builtin.sudo
+
+    - name: Generate RSA 2048 SSH key pair for users
+      community.crypto.openssh_keypair:
+        path: /home/user{{ item }}/.ssh/id_rsa
+        type: rsa
+        size: 2048
+        state: present
+        mode: '0600'
+        owner: 'user{{ item }}'
+        group: 'user{{ item }}'
+      register: ssh_key_result
+      with_sequence: start=1 end=5
+      become: true
+      become_method: ansible.builtin.sudo
+
+    # - name: Ensure openshift-nmstate exists
+    #   kubernetes.core.k8s:
+    #     state: present
+    #     definition:
+    #       apiVersion: v1
+    #       kind: Namespace
+    #       metadata:
+    #         name: openshift-nmstate
+    #   register: namespacenmstate
+    #   retries: 60
+    #   delay: 10
+    #   ignore_errors: true
+
+    # - name: Create the nmstate operator group
+    #   kubernetes.core.k8s:
+    #     kind: OperatorGroup
+    #     definition:
+    #       apiVersion: operators.coreos.com/v1
+    #       kind: OperatorGroup
+    #       metadata:
+    #         annotations:
+    #           olm.providedAPIs: NMState.v1.nmstate.io
+    #         name: openshift-nmstate-flnnw
+    #         namespace: openshift-nmstate
+    #       spec:
+    #         targetNamespaces:
+    #           - openshift-nmstate
+    #         upgradeStrategy: Default
+    #   ignore_errors: true
+
+    # - name: Create the nmstate subscription
+    #   kubernetes.core.k8s:
+    #     kind: Subscription
+    #     definition:
+    #       apiVersion: operators.coreos.com/v1alpha1
+    #       kind: Subscription
+    #       metadata:
+    #         labels:
+    #           operators.coreos.com/kubernetes-nmstate-operator.openshift-nmstate: ""
+    #         name: kubernetes-nmstate-operator
+    #         namespace: openshift-nmstate
+    #       spec:
+    #         channel: stable
+    #         installPlanApproval: Automatic
+    #         name: kubernetes-nmstate-operator
+    #         source: redhat-operators
+    #         sourceNamespace: openshift-marketplace
+    #   ignore_errors: true
+
+    # - name: Pause for 20 seconds to wait for pods
+    #   ansible.builtin.pause:
+    #     seconds: 20
+
+    # - name: Wait for all pods to be running on openshift-nmstate
+    #   kubernetes.core.k8s_info:
+    #     api_version: v1
+    #     kind: Pod
+    #     namespace: "openshift-nmstate"
+    #   register: pod_list
+    #   until: pod_list.resources | selectattr('status.phase', 'eq', 'Running') | list | length == pod_list.resources | length
+    #   retries: 60
+    #   delay: 10
+    #   ignore_errors: true
+
+    # - name: Create the nmstate
+    #   kubernetes.core.k8s:
+    #     kind: NMState
+    #     definition:
+    #       apiVersion: nmstate.io/v1
+    #       kind: NMState
+    #       metadata:
+    #         name: nmstate
+    #       spec: {}
+    #   ignore_errors: true
+
+    # - name: Pause for 20 seconds to create nmstate CRD
+    #   ansible.builtin.pause:
+    #     seconds: 20
+
+    # - name: Configuring NMState NNCP
+    #   kubernetes.core.k8s:
+    #     kind: NodeNetworkConfigurationPolicy
+    #     definition:
+    #       apiVersion: nmstate.io/v1
+    #       kind: NodeNetworkConfigurationPolicy
+    #       metadata:
+    #         name: br-ex-network
+    #       spec:
+    #         nodeSelector:
+    #           node-role.kubernetes.io/worker: ''
+    #         desiredState:
+    #           ovn:
+    #             bridge-mappings:
+    #               - localnet: br-ex-network
+    #                 bridge: br-ex
+    #                 state: present
+    #   ignore_errors: true
+
