--- a/exercise8-break.yaml
+++ b/exercise8-break.yaml
@@ -7,6 +7,16 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
+    - name: Create SSH config file with StrictHostKeyChecking no
+      ansible.builtin.copy:
+        dest: '/home/{{ user }}/.ssh/config'
+        content: |
+          Host *
+            StrictHostKeyChecking no
+        owner: '{{ user }}'
+        group: '{{ user }}'
+        mode: '0600'
+
     - name: Create the idrsa secret
       kubernetes.core.k8s:
         state: present
