--- a/exercise8-break.yaml
+++ b/exercise8-break.yaml
@@ -13,6 +13,7 @@
         content: |
           Host *
             StrictHostKeyChecking no
+            UserKnownHostsFile /dev/null
         owner: '{{ user }}'
         group: '{{ user }}'
         mode: '0600'
