--- a/exercise8-grade.yaml
+++ b/exercise8-grade.yaml
@@ -13,7 +13,7 @@
       no_log: true
       register: testssh
 
-    - name: Check if snapshot has not been restored
+    - name: Check if vn be accessed over SSH
       ansible.builtin.fail:
         msg: "Ooops, SSH is not working"
       when: testssh.rc != 0
