--- a/exercise9-break.yaml
+++ b/exercise9-break.yaml
@@ -25,7 +25,7 @@
 
     - name: Store base64 encoded content in a variable
       ansible.builtin.set_fact:
-        encodedsshpubkey: "{{ idrsapub.content | trim | b64encode }}"
+        encodedsshpubkey: "{{ idrsapub.content }}"
 
     - name: Create the idrsa secret
       kubernetes.core.k8s:
