virtual machine is manual strategy

--- a/exercise9-grade.yaml
+++ b/exercise9-grade.yaml
@@ -22,4 +22,4 @@
     - name: Print if runStrategy is not set to Manual
       ansible.builtin.fail:
         msg: "The runStrategy is set correctly and now the user can shut down their VM via Operating System!"
-      when: exercise9vm.resources[0].spec.runStrategy != 'Manual'
+      when: exercise9vm.resources[0].spec.runStrategy == 'Manual'
