--- a/exercise9-grade.yaml
+++ b/exercise9-grade.yaml
@@ -20,6 +20,6 @@
       when: exercise9vm.resources[0].spec.runStrategy != 'Manual'
 
     - name: Print if runStrategy is not set to Manual
-      ansible.builtin.fail:
+      ansible.builtin.assert:
         msg: "The runStrategy is set correctly and now the user can shut down their VM via Operating System!"
       when: exercise9vm.resources[0].spec.runStrategy == 'Manual'
