fix assert on ex9

--- a/exercise9-grade.yaml
+++ b/exercise9-grade.yaml
@@ -14,14 +14,9 @@
         namespace: namespace-{{ user }}
       register: exercise9vm
 
-    - name: Fail if runStrategy is not set to Manual
-      ansible.builtin.fail:
-        msg: "The runStrategy is not set correctly. It should be either 'Manual'."
-      when: exercise9vm.resources[0].spec.runStrategy != 'Manual'
-
     - name: Print if runStrategy is not set to Manual
       ansible.builtin.assert:
         that:
-          -   exercise9vm.resources[0].spec.runStrategy == 'Manual'
-        msg: "The runStrategy is set correctly and now the user can shut down their VM via Operating System!"
-
+          -  exercise9vm.resources[0].spec.runStrategy == 'Manual'
+        fail_msg: "The runStrategy is not set correctly. It should be either 'Manual'."
+        success_msg: "The runStrategy is set correctly and now the user can shut down their VM via Operating System!"
