--- a/exercise11-break.yaml
+++ b/exercise11-break.yaml
@@ -16,6 +16,21 @@
       delay: 10
       failed_when: createnad is failed or createnad.failed
 
+    - name: Get user SSH key
+      ansible.builtin.slurp:
+        src: "/home/{{ user }}/.ssh/id_rsa.pub"
+      register: usersshkey
+
+    - name: Create the idrsa secret
+      kubernetes.core.k8s:
+        state: present
+        template: "exercise11-secret.yaml.j2"
+      register: secretidrsa
+      until: secretidrsa is succeeded
+      retries: 60
+      delay: 10
+      failed_when: secretidrsa is failed or secretidrsa.failed
+
     - name: Creating VM A
       kubernetes.core.k8s:
         state: present
