--- a/exercise11-break.yaml
+++ b/exercise11-break.yaml
@@ -50,3 +50,27 @@
       retries: 60
       delay: 10
       failed_when: createvmb is failed or createvmb.failed
+
+    - name: Wait for VM A to be running
+      kubernetes.core.k8s_info:
+        api_version: kubevirt.io/v1
+        kind: VirtualMachineInstance
+        namespace: "namespace-{{ user }}"
+        name: " exercise11-a"
+      register: exercise11ainfo
+      until: " exercise11ainfo.resources | length > 0 and exercise11ainfo.resources[0].status.phase == 'Running'"
+      retries: 60
+      delay: 10
+      failed_when: exercise11ainfo.resources | length == 0
+
+    - name: Wait for VM B to be running
+      kubernetes.core.k8s_info:
+        api_version: kubevirt.io/v1
+        kind: VirtualMachineInstance
+        namespace: "namespace-{{ user }}"
+        name: " exercise11-b"
+      register: exercise11binfo
+      until: " exercise11binfo.resources | length > 0 and exercise11binfo.resources[0].status.phase == 'Running'"
+      retries: 60
+      delay: 10
+      failed_when: exercise11binfo.resources | length == 0
