--- a/exercise2-fix.yaml
+++ b/exercise2-fix.yaml
@@ -43,8 +43,8 @@
         namespace: "namespace-{{ user }}"
         name: "exercise2"
       register: cleanvm
-      retries: "60"
-      delay: "2"
+      retries: 60
+      delay: 2
       until: cleanvm.resources | length == 0
 
     - name: Fixing VM
