--- a/exercise3-clean.yaml
+++ b/exercise3-clean.yaml
@@ -52,6 +52,6 @@
         namespace: "namespace-{{ user }}"
         name: "exercise3"
       register: cleanvm
-      retries: "60"
-      delay: "2"
+      retries: 60
+      delay: 2
       until: cleanvm.resources | length == 0
