--- a/exercise5-clean.yaml
+++ b/exercise5-clean.yaml
@@ -37,6 +37,6 @@
         namespace: "namespace-{{ user }}"
         name: "exercise5"
       register: cleanvm
-      retries: "60"
-      delay: "2"
+      retries: 60
+      delay: 2
       until: cleanvm.resources | length == 0
