--- a/exercise9-clean.yaml
+++ b/exercise9-clean.yaml
@@ -22,8 +22,8 @@
         namespace: "namespace-{{ user }}"
         name: "exercise9"
       register: cleanvm
-      retries: "60"
-      delay: "2"
+      retries: 60
+      delay: 2
       until: cleanvm.resources | length == 0
 
     - name: Removing the idrsa-exercise9 secret
