fix vm name on ex11 fix

--- a/exercise11-fix.yaml
+++ b/exercise11-fix.yaml
@@ -104,7 +104,7 @@
     - name: Creating VM B
       kubernetes.core.k8s:
         state: present
-        template: "exercise11-create-vm-b.yaml.j2"
+        template: "exercise11-create-vm-b-fix.yaml.j2"
       register: createvmb
       until: createvmb is succeeded
       retries: 60
